<?xml version="1.0"?>
<package format="2">
  <name>free_global_planner</name>
  <version>0.0.0</version>
  <description>The free_global_planner package</description>

  <maintainer email="alexander@todo.todo">alexander</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>nav_core</build_depend>
  <exec_depend>nav_core</exec_depend>

  <export>
    <nav_core plugin="${prefix}/free_global_planner_plugins.xml" />
  </export>

</package>
